--- a/O-нотация. Простые структуры данных/Лабораторная 1/Скобочные группы/task-info.yaml
+++ b/O-нотация. Простые структуры данных/Лабораторная 1/Скобочные группы/task-info.yaml
@@ -3,7 +3,7 @@ files:
   - name: task.py
     visible: true
     placeholders:
-      - offset: 280
+      - offset: 462
         length: 49
         placeholder_text: "...  # TODO реализовать проверку скобочной группы"
         initial_state:
@@ -12,7 +12,7 @@ files:
         initialized_from_dependency: false
         encrypted_possible_answer: '...'
         selected: false
-        status: Unchecked
+        status: Solved
     learner_created: false
   - name: tests/test_task.py
     visible: false
@@ -23,6 +23,9 @@ files:
   - name: tests/__init__.py
     visible: false
     learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Tue, 24 Dec 2024 17:54:49 UTC"
 record: -1
 solution_hidden: false
