--- a/Итеративные и рекурсивные алгоритмы/Лабораторная 2/Итеративный линейный поиск/task-info.yaml
+++ b/Итеративные и рекурсивные алгоритмы/Лабораторная 2/Итеративный линейный поиск/task-info.yaml
@@ -11,7 +11,7 @@ files:
           offset: 294
         initialized_from_dependency: false
         encrypted_possible_answer: '...'
-        selected: false
+        selected: true
         status: Unchecked
     learner_created: false
   - name: tests/test_task.py
