--- a/Итеративные и рекурсивные алгоритмы/Практические задания/Итеративный фибоначчи/task-info.yaml
+++ b/Итеративные и рекурсивные алгоритмы/Практические задания/Итеративный фибоначчи/task-info.yaml
@@ -3,7 +3,7 @@ files:
   - name: task.py
     visible: true
     placeholders:
-      - offset: 269
+      - offset: 629
         length: 57
         placeholder_text: "...  # TODO написать итеративный алгоритм чисел Фибоначчи"
         initial_state:
@@ -26,7 +26,7 @@ files:
           
               return b
         selected: false
-        status: Unchecked
+        status: Solved
     learner_created: false
   - name: tests/test_task.py
     visible: false
@@ -37,5 +37,8 @@ files:
   - name: tests/__init__.py
     visible: false
     learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Thu, 09 Jan 2025 16:50:57 UTC"
 record: -1
