--- a/Итеративные и рекурсивные алгоритмы/Лабораторная 2/Итеративный линейный поиск/task-info.yaml
+++ b/Итеративные и рекурсивные алгоритмы/Лабораторная 2/Итеративный линейный поиск/task-info.yaml
@@ -12,7 +12,7 @@ files:
         initialized_from_dependency: false
         encrypted_possible_answer: '...'
         selected: true
-        status: Unchecked
+        status: Failed
     learner_created: false
   - name: tests/test_task.py
     visible: false
@@ -23,5 +23,9 @@ files:
   - name: tests/__init__.py
     visible: false
     learner_created: false
-status: Unchecked
+status: Failed
+feedback:
+  message: "ValueError not raised : При поиске минимума в пустой последовательност\
+    и должна возвращаться ошибка"
+  time: "Wed, 15 Jan 2025 15:31:47 UTC"
 record: -1
