--- a/Динамическое программирование/Практические задания/Лестница. Количество маршрутов/task-info.yaml
+++ b/Динамическое программирование/Практические задания/Лестница. Количество маршрутов/task-info.yaml
@@ -29,7 +29,7 @@ files:
           
               return count_paths
         selected: false
-        status: Unchecked
+        status: Failed
     learner_created: false
   - name: tests/test_task.py
     visible: false
@@ -44,5 +44,12 @@ files:
     visible: true
     is_binary: true
     learner_created: false
-status: Unchecked
+status: Failed
+feedback:
+  message: "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987] !=\
+    \ None : Не правильно :( До ступени 16 количество маршрутов должно быть [0, 1,\
+    \ 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987]."
+  time: "Wed, 22 Jan 2025 16:37:50 UTC"
+  expected: "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987]"
+  actual: None
 record: -1
