--- a/Динамическое программирование/Практические задания/Платная лестница. Ленивая динамика/task-info.yaml
+++ b/Динамическое программирование/Практические задания/Платная лестница. Ленивая динамика/task-info.yaml
@@ -21,7 +21,7 @@ files:
           
               return lazy_method(stairway, len(stairway)-1)
         selected: false
-        status: Unchecked
+        status: Failed
     learner_created: false
   - name: tests/test_task.py
     visible: false
@@ -32,5 +32,11 @@ files:
   - name: tests/__init__.py
     visible: false
     learner_created: false
-status: Unchecked
+status: Failed
+feedback:
+  message: "10 != None : Лестница с одной ступенью тоже лестница. Выбор не велик,\
+    \ просто наступаем на эту ступень"
+  time: "Wed, 22 Jan 2025 17:48:48 UTC"
+  expected: 10
+  actual: None
 record: -1
