--- a/Динамическое программирование/Самостоятельная работа/Уникальные пути/task-info.yaml
+++ b/Динамическое программирование/Самостоятельная работа/Уникальные пути/task-info.yaml
@@ -20,7 +20,7 @@ files:
                   for j in range(1, n):
                       dp[i][j] = dp[i - 1][j] + dp[i][j - 1]
               return dp[m - 1][n - 1]
-        selected: false
+        selected: true
         status: Unchecked
     learner_created: false
   - name: tests/test_task.py
