--- a/Графы и деревья/Практические задания/Обход в ширину/task-info.yaml
+++ b/Графы и деревья/Практические задания/Обход в ширину/task-info.yaml
@@ -9,8 +9,8 @@ files:
   - name: task.py
     visible: true
     placeholders:
-      - offset: 561
-        length: 38
+      - offset: 88
+        length: 2
         placeholder_text: "...  # TODO реализовать обход в ширину"
         initial_state:
           length: 38
@@ -32,10 +32,10 @@ files:
                           visited[neighbor] = True  # если узел "подожжен", то мы его посещали
           
               return path
-        selected: false
-        status: Unchecked
-      - offset: 633
-        length: 72
+        selected: true
+        status: Failed
+      - offset: 88
+        length: 2
         placeholder_text: "# TODO записать граф с помощью модуля networkx и прверить о\
       бход в ширину"
         initial_state:
@@ -62,8 +62,8 @@ files:
               ])
           
               print(bfs(graph, "A"))
-        selected: false
-        status: Unchecked
+        selected: true
+        status: Failed
     learner_created: false
   - name: tests/__init__.py
     visible: false
@@ -72,5 +72,15 @@ files:
     visible: true
     is_binary: true
     learner_created: false
-status: Unchecked
+  - name: from_lection.py
+    visible: true
+    learner_created: true
+  - name: gr.png
+    visible: true
+    is_binary: true
+    learner_created: true
+status: Failed
+feedback:
+  message: Error
+  time: "Wed, 29 Jan 2025 18:13:28 UTC"
 record: -1
